<resources>
    <string name="app_name">Calendar Work Helper</string>
    <string name="action_settings">Settings</string>
    <string name="eventDate">Pick date</string>
    <string name="renameEditText">Enter name here</string>
    <string name="addEvent">Add to calendar</string>
    <string name="temporaryOptionsButton">Temporary options</string>
    <string name="shiftHoursText">Shift hours</string>
    <string name="ShiftButtonPlaceholder">10:00</string>
    <string name="eventTitleText">Event title</string>
    <string name="eventTitleHint">Enter title</string>

    <string-array name="spinner">
        <item>Day</item>
        <item>Night</item>
        <item>Sat</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Headers -->
    <string name="pref_header_general">Event data</string>
    <string name="pref_header_work_times">Work times</string>

    <!-- General preferences -->
    <string name="pref_general_event_title">Title</string>
    <string name="pref_default_event_title">Work</string>

    <string name="pref_general_event_description">Description</string>

    <string name="pref_general_event_location">Location</string>

    <!-- Work times preferences -->
    <string name="pref_title_day_start">Day shift start time</string>
    <string name="pref_default_day_start">10:00</string>

    <string name="pref_title_day_end">Day shift end time</string>
    <string name="pref_default_day_end">16:00</string>

    <string name="pref_title_night_start">Night shift start time</string>
    <string name="pref_default_night_start">16:00</string>

    <string name="pref_title_night_end">Night shift end time</string>
    <string name="pref_default_night_end">22:00</string>

    <string name="pref_title_sat_start">Saturday shift start time</string>
    <string name="pref_default_sat_start">20:00</string>

    <string name="pref_title_sat_end">Saturday shift end time</string>
    <string name="pref_default_sat_end">23:00</string>

    <!-- Keys -->
    <string name="event_title_key">event_title</string>
    <string name="event_description_key">event_description</string>
    <string name="event_location_key">event_location</string>

    <string name="day_start_key">day_shift_start_time</string>
    <string name="day_end_key">day_shift_end_time</string>
    <string name="night_start_key">night_shift_start_time</string>
    <string name="night_end_key">night_shift_end_time</string>
    <string name="sat_start_key">saturday_shift_start_time</string>
    <string name="sat_end_key">saturday_shift_end_time</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_aux">AuxActivity</string>

</resources>
