<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:id="@+id/firstLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1" >

        <Button
            android:id="@+id/calendarEventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/eventDate"
            android:textSize="15sp"
            android:textAppearance="?attr/editTextStyle"
            android:onClick="showDatePickerDialog"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <Button
        android:id="@+id/temporaryOptionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@id/firstLinearLayout"
        android:text="@string/temporaryOptionsButton"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@android:color/darker_gray"
        android:onClick="showTemporaryOptions"/>

    <GridLayout
        android:id="@+id/temporaryOptionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_centerHorizontal="true"
        android:columnCount="4"
        android:layout_below="@+id/firstLinearLayout"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/shiftHoursText"
            style="?android:attr/textAppearance"/>

        <Button
            android:id="@+id/shiftStartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="end"
            android:text="@string/ShiftButtonPlaceholder"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="showTimePickerDialog"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:text="‒"

            style="?android:attr/textAppearance"/>

        <Button
            android:id="@+id/shiftEndButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/ShiftButtonPlaceholder"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="showTimePickerDialog"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:text="@string/eventTitleText"
            style="?android:attr/textAppearance" />

        <EditText
            android:id="@+id/eventTitleEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:hint="@string/eventTitleHint"
            android:maxLines="1"
            style="?android:attr/textAppearance"/>

    </GridLayout>

</RelativeLayout>
